--- a/ChristianRondeau.JiraTogglSync.Services/ChristianRondeau.JiraTogglSync.Services.csproj
+++ b/ChristianRondeau.JiraTogglSync.Services/ChristianRondeau.JiraTogglSync.Services.csproj
@@ -35,6 +35,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Atlassian.Jira">
+      <HintPath>..\packages\Atlassian.SDK.2.3.0\lib\Atlassian.Jira.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -50,6 +53,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Modules\C--Toggl-Api-Client\Toggl\Toggl.csproj">
+      <Project>{ae43a30c-8515-41f2-a018-aa9ae9b80c27}</Project>
+      <Name>Toggl</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
