Ask/save Toggl credentials and display the username

--- a/ChristianRondeau.JiraTogglSync.CommandLine/ChristianRondeau.JiraTogglSync.CommandLine.csproj
+++ b/ChristianRondeau.JiraTogglSync.CommandLine/ChristianRondeau.JiraTogglSync.CommandLine.csproj
@@ -33,14 +33,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Configuration" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Security" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigurationHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
