Shorten executable name: jira-toggl-sync.exe

--- a/ChristianRondeau.JiraTogglSync.CommandLine/ChristianRondeau.JiraTogglSync.CommandLine.csproj
+++ b/ChristianRondeau.JiraTogglSync.CommandLine/ChristianRondeau.JiraTogglSync.CommandLine.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ChristianRondeau.JiraTogglSync.CommandLine</RootNamespace>
-    <AssemblyName>ChristianRondeau.JiraTogglSync.CommandLine</AssemblyName>
+    <AssemblyName>jira-toggl-sync</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
