--- a/ChristianRondeau.JiraTogglSync.Services/ChristianRondeau.JiraTogglSync.Services.csproj
+++ b/ChristianRondeau.JiraTogglSync.Services/ChristianRondeau.JiraTogglSync.Services.csproj
@@ -42,9 +42,13 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IWorksheetSourceService.cs" />
+    <Compile Include="IWorksheetTargetService.cs" />
     <Compile Include="TogglService.cs" />
     <Compile Include="JiraService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkLogEntry.cs" />
+    <Compile Include="WorksheetSyncService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
