--- a/ChristianRondeau.JiraTogglSync.Services/ChristianRondeau.JiraTogglSync.Services.csproj
+++ b/ChristianRondeau.JiraTogglSync.Services/ChristianRondeau.JiraTogglSync.Services.csproj
@@ -44,6 +44,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Issue.cs" />
     <Compile Include="IWorksheetSourceService.cs" />
     <Compile Include="IWorksheetTargetService.cs" />
     <Compile Include="TogglService.cs" />
