--- a/JiraTogglSync.Services/JiraTogglSync.Services.csproj
+++ b/JiraTogglSync.Services/JiraTogglSync.Services.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{331AC73B-91AE-4E76-ACC1-3923D0479188}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ChristianRondeau.JiraTogglSync.Services</RootNamespace>
-    <AssemblyName>ChristianRondeau.JiraTogglSync.Services</AssemblyName>
+    <RootNamespace>JiraTogglSync.Services</RootNamespace>
+    <AssemblyName>JiraTogglSync.Services</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
