--- a/JiraTogglSync.Tests/JiraTogglSync.Tests.csproj
+++ b/JiraTogglSync.Tests/JiraTogglSync.Tests.csproj
@@ -61,7 +61,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="IssueTests.cs" />
-    <Compile Include="TogglServiceTests.cs" />
+    <Compile Include="TogglRepositoryTests.cs" />
     <Compile Include="JiraRestServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkLogEntryTests.cs" />
