--- a/JiraTogglSync.Services/JiraTogglSync.Services.csproj
+++ b/JiraTogglSync.Services/JiraTogglSync.Services.csproj
@@ -48,7 +48,9 @@
     <Compile Include="IExternalWorksheetRepository.cs" />
     <Compile Include="IJiraRepository.cs" />
     <Compile Include="JiraRestService..cs" />
+    <Compile Include="OperationStatus.cs" />
     <Compile Include="SyncPlan.cs" />
+    <Compile Include="SyncReport.cs" />
     <Compile Include="TogglRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkLogEntry.cs" />
