--- a/JiraTogglSync.Tests/packages.config
+++ b/JiraTogglSync.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FluentAssertions" version="4.19.2" targetFramework="net452" />
   <package id="NSubstitute" version="2.0.3" targetFramework="net452" />
   <package id="NUnit" version="3.7.1" targetFramework="net452" />
   <package id="SemanticComparison" version="3.18.5" targetFramework="net45" />
