--- a/JiraTogglSync.Tests/packages.config
+++ b/JiraTogglSync.Tests/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="4.19.2" targetFramework="net452" />
-  <package id="NSubstitute" version="2.0.3" targetFramework="net452" />
-  <package id="NUnit" version="3.7.1" targetFramework="net452" />
-  <package id="SemanticComparison" version="3.18.5" targetFramework="net45" />
+  <package id="Castle.Core" version="4.4.0" targetFramework="net452" />
+  <package id="FluentAssertions" version="5.7.0" targetFramework="net452" />
+  <package id="NSubstitute" version="4.2.0" targetFramework="net452" />
+  <package id="NUnit" version="3.12.0" targetFramework="net452" />
+  <package id="SemanticComparison" version="4.1.0" targetFramework="net452" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
 </packages>
